--- a/topic01/ajaxlabel.html
+++ b/topic01/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://2016-2017.github.io/prog-fund-2//topic01/indexmoodle.html',
+    url: '//2016-2017.github.io/prog-fund-2//topic01/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
