regen of topic01-05

--- a/labwall.html
+++ b/labwall.html
@@ -208,6 +208,14 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li><p>be more familiar with the Eclipse IDE.</p>
+</li>
+<li><p>understand and be able to use an ArrayList data structure.</p>
+</li>
+<li><p>be able add a menu driven approach to the Shop console app.</p>
+</li>
+</ul>
 
       </div>
     </div>
@@ -227,6 +235,10 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li>Understand how to implement CRUD into the ShopV3.0 example.</li>
+<li>Apply your CRUD knowledge to another domain i.e. build a DVD library.</li>
+</ul>
 
       </div>
     </div>
@@ -246,6 +258,14 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
+<ul>
+<li><p>Store objects into XML files and retrieve them from XML files (using ShopV4.0 as a starting point).</p>
+</li>
+<li><p>Apply this XML knowledge to another domain i.e. the DVD library.</p>
+</li>
+<li><p>Include Exception handling for invalid user input.</p>
+</li>
+</ul>
 
       </div>
     </div>
