--- a/topic03/index.html
+++ b/topic03/index.html
@@ -183,6 +183,14 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li><p>be more familiar with the Eclipse IDE.</p>
+</li>
+<li><p>understand and be able to use an ArrayList data structure.</p>
+</li>
+<li><p>be able add a menu driven approach to the Shop console app.</p>
+</li>
+</ul>
 
       </div>
     </div>
