--- a/topic04/indexmoodle.html
+++ b/topic04/indexmoodle.html
@@ -69,6 +69,10 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li>Understand how to implement CRUD into the ShopV3.0 example.</li>
+<li>Apply your CRUD knowledge to another domain i.e. build a DVD library.</li>
+</ul>
 
       </div>
     </div>
