--- a/topic05/index.html
+++ b/topic05/index.html
@@ -229,6 +229,14 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
+<ul>
+<li><p>Store objects into XML files and retrieve them from XML files (using ShopV4.0 as a starting point).</p>
+</li>
+<li><p>Apply this XML knowledge to another domain i.e. the DVD library.</p>
+</li>
+<li><p>Include Exception handling for invalid user input.</p>
+</li>
+</ul>
 
       </div>
     </div>
