--- a/topic08/book/index.html
+++ b/topic08/book/index.html
@@ -89,7 +89,7 @@ h3
   <header class="header item">
     <i id="toc" class="sitemap icon"></i>
     <a href="../index.html">
-      Abstraction, Debugging (and Assignment 2)
+      Abstraction, Debugging
     </a>
   </header>
   <div class="right tab-menu menu">
