--- a/topic08/indexmoodle.html
+++ b/topic08/indexmoodle.html
@@ -77,17 +77,17 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-prog-fund-2-assignment-2-v2.pdf">
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-resources.zip">
     <div class="content">
-        <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header">  Assignment 2 </div>
+        <div class="right floated meta"> <i class="file large icon"></i></div>
+        <div class="header"> Debugging Resources </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-prog-fund-2-assignment-2-v2.jpg">
+      <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-resources.jpg">
     </div>
     <div class="content">
       <div class="description">
-         <p>The specification for Assignment 2 (worth 55% of your grade for this semester).</p>
+         <p>Source code for debugging examples.</p>
 
       </div>
     </div>
