--- a/topic04/indexmoodle.html
+++ b/topic04/indexmoodle.html
@@ -42,7 +42,7 @@ figcaption
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> CRUD Process </div>
+        <div class="header"> CRUD Process </div>
     </div>
     <div class="image">
       <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.jpg">
@@ -53,6 +53,7 @@ figcaption
 
       </div>
     </div>
+    
   </a>
 
   
@@ -67,10 +68,15 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>On completion of this lab you should:- Understand how to implement CRUD into the ShopV3.0 example.- Apply your CRUD knowledge to another domain i.e. build a DVD library.</p>
+         <p>On completion of this lab you should:</p>
+<ul>
+<li>Understand how to implement CRUD into the ShopV3.0 example.</li>
+<li>Apply your CRUD knowledge to another domain i.e. build a DVD library.</li>
+</ul>
 
       </div>
     </div>
+    
   </a>
 
   
