Adding test class to topic 09

--- a/topic06/index.html
+++ b/topic06/index.html
@@ -183,9 +183,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>We will introduce the board game, North Sea Oil, that you will build for your assignment.
-- Due date: Sunday 18th March, 5pm sharp.
-- This assignment is worth 45% of your overall grade for this module.</p>
+         <p>We will introduce the board game, North Sea Oil, that you will build for your assignment.</p>
 
       </div>
     </div>
@@ -300,11 +298,6 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
-<ul>
-<li>build a small, console-based application using ArrayList, HashMap and HashSet.</li>
-<li>integrate code to tokenize Strings into the above app.</li>
-<li>use the Random class to return random objects from a collection.</li>
-</ul>
 
       </div>
     </div>
