--- a/topic09/indexmoodle.html
+++ b/topic09/indexmoodle.html
@@ -153,13 +153,32 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/testing-resources.zip">
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/a-test-class.zip">
+    <div class="content">
+        <div class="right floated meta"> <i class="file large icon"></i></div>
+        <div class="header"> Test Class  </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/a-test-class.gif">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>For use with Assignment 2</p>
+
+      </div>
+    </div>
+    
+  </a>
+
+  
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-8/testing-resources.zip">
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Testing Resources </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/testing-resources.jpg">
+      <img class="ui bordered rounded image" src="http://2016-2017.github.io/prog-fund-2/topic09/talk-8/testing-resources.jpg">
     </div>
     <div class="content">
       <div class="description">
@@ -183,12 +202,6 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
-<ul>
-<li><p>Write JUnit Test Cases for the DVD app.</p>
-</li>
-<li><p>Run and interpret the results of JUnit test classes.</p>
-</li>
-</ul>
 
       </div>
     </div>
