updated tutors version

--- a/topic02/indexmoodle.html
+++ b/topic02/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/talk-1/a-prog-fund-2-array-recap.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/talk-1/a-prog-fund-2-array-recap.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Array Recap </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/talk-2/b-prog-fund-2-intro-to-arraylists.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/talk-2/b-prog-fund-2-intro-to-arraylists.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Introduction to ArrayList </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/book-1/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-02a </div>
@@ -96,7 +102,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic02/book-2/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-02b </div>
