--- a/topic03/indexmoodle.html
+++ b/topic03/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-1/a-prog-fund-2-intro-to-arraylists (contd).pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-1/a-prog-fund-2-intro-to-arraylists (contd).pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Continuing with ArrayList </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-2/b-prog-fund-2-menu-driven-systems.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-2/b-prog-fund-2-menu-driven-systems.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Menu Driven Systems </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-03 </div>
