--- a/topic04/indexmoodle.html
+++ b/topic04/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> CRUD Process </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-04 </div>
