--- a/topic01/indexmoodle.html
+++ b/topic01/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-1/a-prog-fund-2-intro-to-module.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-1/a-prog-fund-2-intro-to-module.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Introduction to Module </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-2/b-prog-fund-2-main-and-JVM.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-2/b-prog-fund-2-main-and-JVM.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JVM </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-3/c-prog-fund-2-eclipse.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-3/c-prog-fund-2-eclipse.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Introduction to Eclipse </div>
@@ -96,7 +102,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-4/d-prog-fund-2-OO-Recap.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-4/d-prog-fund-2-OO-Recap.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> OO Recap </div>
@@ -115,7 +123,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-5/e-prog-fund-2-scanner-io.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-5/e-prog-fund-2-scanner-io.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Scanner IO </div>
@@ -134,7 +144,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-01 </div>
