--- a/topic06/indexmoodle.html
+++ b/topic06/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-1/d-prog-fund-2-assignment-1-pbl.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-1/d-prog-fund-2-assignment-1-pbl.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Problem-based Learning </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-2/e-prog-fund-2-assignment-1-north-sea-oil.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-2/e-prog-fund-2-assignment-1-north-sea-oil.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Assignment 1 </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-3/a-rules.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-3/a-rules.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Rules </div>
@@ -96,7 +102,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-4/d-resources.zip">
+  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> PBL Resources </div>
@@ -115,7 +123,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-5/a-prog-fund-2-tech-support-V1.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-5/a-prog-fund-2-tech-support-V1.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V1 </div>
@@ -134,7 +144,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-6/b-prog-fund-2-tech-support-V2.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-6/b-prog-fund-2-tech-support-V2.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V2 </div>
@@ -153,7 +165,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-7/c-prog-fund-2-tech-support-V3.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-7/c-prog-fund-2-tech-support-V3.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V3 </div>
@@ -172,7 +186,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-06 </div>
