--- a/topic08/indexmoodle.html
+++ b/topic08/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-1/a-prog-fund-2-abstraction.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-1/a-prog-fund-2-abstraction.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Abstraction </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-2/a-prog-fund-2-debugging.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-2/a-prog-fund-2-debugging.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Debugging </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-resources.zip">
+  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Debugging Resources </div>
@@ -96,7 +102,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-08 </div>
