--- a/topic09/indexmoodle.html
+++ b/topic09/indexmoodle.html
@@ -39,7 +39,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-1/a-prog-fund-2-TDD-intro.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-1/a-prog-fund-2-TDD-intro.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Test Driven Development (TDD) </div>
@@ -58,7 +60,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-2/b-prog-fund-2-junit-example.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-2/b-prog-fund-2-junit-example.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JUnit and DVD.java </div>
@@ -77,7 +81,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-3/c-prog-fund-2-junit-terminology.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-3/c-prog-fund-2-junit-terminology.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JUnit Terminology </div>
@@ -96,7 +102,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-4/d-prog-fund-2-junit-planning-tests.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-4/d-prog-fund-2-junit-planning-tests.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Planning Testing </div>
@@ -115,7 +123,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-5/e-prog-fund-2-junit-dvd-app.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-5/e-prog-fund-2-junit-dvd-app.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Completing DVD app testing </div>
@@ -134,7 +144,9 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-6/f-prog-fund-2-assignment-2.pdf">
+  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-6/f-prog-fund-2-assignment-2.pdf" target="_blank">
+  
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Assignment 2 </div>
@@ -153,7 +165,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/a-test-class.zip">
+  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Test Class  </div>
@@ -172,7 +186,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-8/testing-resources.zip">
+  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Testing Resources </div>
@@ -191,7 +207,9 @@ figcaption
 
   
   
+  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/book/index.html">
+  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-09 </div>
