topic10 ready to go

--- a/topic01/indexmoodle.html
+++ b/topic01/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-1/a-prog-fund-2-intro-to-module.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-1/a-prog-fund-2-intro-to-module.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Introduction to Module </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-2/b-prog-fund-2-main-and-JVM.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-2/b-prog-fund-2-main-and-JVM.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JVM </div>
@@ -81,9 +77,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-3/c-prog-fund-2-eclipse.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-3/c-prog-fund-2-eclipse.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Introduction to Eclipse </div>
@@ -102,9 +96,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-4/d-prog-fund-2-OO-Recap.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-4/d-prog-fund-2-OO-Recap.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> OO Recap </div>
@@ -114,7 +106,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>A recap of OO concepts.</p>
+         <p>A recap of OO concepts.  </p>
 
       </div>
     </div>
@@ -123,9 +115,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-5/e-prog-fund-2-scanner-io.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/talk-5/e-prog-fund-2-scanner-io.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Scanner IO </div>
@@ -144,9 +134,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic01/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-01 </div>
