--- a/topic03/indexmoodle.html
+++ b/topic03/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-1/a-prog-fund-2-intro-to-arraylists (contd).pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-1/a-prog-fund-2-intro-to-arraylists (contd).pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Continuing with ArrayList </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-2/b-prog-fund-2-menu-driven-systems.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/talk-2/b-prog-fund-2-menu-driven-systems.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Menu Driven Systems </div>
@@ -81,9 +77,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic03/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-03 </div>
@@ -94,6 +88,14 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li><p>be more familiar with the Eclipse IDE.</p>
+</li>
+<li><p>understand and be able to use an ArrayList data structure.</p>
+</li>
+<li><p>be able add a menu driven approach to the Shop console app.</p>
+</li>
+</ul>
 
       </div>
     </div>
