--- a/topic06/indexmoodle.html
+++ b/topic06/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-1/d-prog-fund-2-assignment-1-pbl.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-1/d-prog-fund-2-assignment-1-pbl.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Problem-based Learning </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-2/e-prog-fund-2-assignment-1-north-sea-oil.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-2/e-prog-fund-2-assignment-1-north-sea-oil.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Assignment 1 </div>
@@ -72,7 +68,9 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>We will introduce the board game, North Sea Oil, that you will build for your assignment.</p>
+         <p>We will introduce the board game, North Sea Oil, that you will build for your assignment.
+- Due date: Sunday 18th March, 5pm sharp.
+- This assignment is worth 45% of your overall grade for this module.</p>
 
       </div>
     </div>
@@ -81,9 +79,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-3/a-rules.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-3/a-rules.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Rules </div>
@@ -102,9 +98,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-4/d-resources.zip">
-  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> PBL Resources </div>
@@ -123,9 +117,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-5/a-prog-fund-2-tech-support-V1.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-5/a-prog-fund-2-tech-support-V1.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V1 </div>
@@ -144,9 +136,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-6/b-prog-fund-2-tech-support-V2.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-6/b-prog-fund-2-tech-support-V2.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V2 </div>
@@ -165,9 +155,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-7/c-prog-fund-2-tech-support-V3.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/talk-7/c-prog-fund-2-tech-support-V3.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Tech Support System V3 </div>
@@ -186,9 +174,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic06/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-06 </div>
@@ -199,6 +185,11 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
+<ul>
+<li>build a small, console-based application using ArrayList, HashMap and HashSet.</li>
+<li>integrate code to tokenize Strings into the above app.</li>
+<li>use the Random class to return random objects from a collection.</li>
+</ul>
 
       </div>
     </div>
