--- a/topic07/indexmoodle.html
+++ b/topic07/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic07/talk-1/a-prog-fund-2-inheritance.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic07/talk-1/a-prog-fund-2-inheritance.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Inheritance </div>
@@ -51,7 +49,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>We will start investigating inheritance which is one of the key principles in Object Oriented programming.</p>
+         <p>We will start investigating inheritance which is one of the key principles in Object Oriented programming. </p>
 
       </div>
     </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic07/talk-2/b-prog-fund-2-exploring-polymorphism.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic07/talk-2/b-prog-fund-2-exploring-polymorphism.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Exploring Polymorphism </div>
@@ -72,7 +68,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>We will continue looking at inheritance and cover polymorphism, overriding and dynamic method lookup.</p>
+         <p>We will continue looking at inheritance and cover polymorphism, overriding and dynamic method lookup. </p>
 
       </div>
     </div>
@@ -81,9 +77,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic07/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-07 </div>
@@ -94,6 +88,12 @@ figcaption
     <div class="content">
       <div class="description">
          <p>The objectives of this lab are to:</p>
+<ul>
+<li>Understand the ideas behind Inheritance</li>
+<li>Understand and implement the non-Inheritance solution of the Network system.</li>
+<li>Implement the changes of structure to include inheritance.</li>
+<li>(Advanced) Sucessfully implement polymorphism, overriding in the Network system.</li>
+</ul>
 
       </div>
     </div>
