--- a/topic08/indexmoodle.html
+++ b/topic08/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-1/a-prog-fund-2-abstraction.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-1/a-prog-fund-2-abstraction.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Abstraction </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-2/a-prog-fund-2-debugging.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-2/a-prog-fund-2-debugging.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Debugging </div>
@@ -81,9 +77,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/talk-3/c-resources.zip">
-  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Debugging Resources </div>
@@ -102,9 +96,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic08/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-08 </div>
@@ -115,6 +107,10 @@ figcaption
     <div class="content">
       <div class="description">
          <p>The objectives of this lab are to:</p>
+<ul>
+<li>Understand the ideas behind abstraction</li>
+<li>Sucessfully implement abstraction in the Network system.</li>
+</ul>
 
       </div>
     </div>
