--- a/topic04/indexmoodle.html
+++ b/topic04/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/talk-1/a-prog-fund-2-CRUD-process.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> CRUD Process </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic04/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-04 </div>
@@ -73,6 +69,10 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should:</p>
+<ul>
+<li>Understand how to implement CRUD into the ShopV3.0 example.</li>
+<li>Apply your CRUD knowledge to another domain i.e. build a DVD library.</li>
+</ul>
 
       </div>
     </div>
