--- a/topic09/indexmoodle.html
+++ b/topic09/indexmoodle.html
@@ -39,9 +39,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-1/a-prog-fund-2-TDD-intro.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-1/a-prog-fund-2-TDD-intro.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Test Driven Development (TDD) </div>
@@ -60,9 +58,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-2/b-prog-fund-2-junit-example.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-2/b-prog-fund-2-junit-example.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JUnit and DVD.java </div>
@@ -81,9 +77,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-3/c-prog-fund-2-junit-terminology.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-3/c-prog-fund-2-junit-terminology.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> JUnit Terminology </div>
@@ -102,9 +96,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-4/d-prog-fund-2-junit-planning-tests.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-4/d-prog-fund-2-junit-planning-tests.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Planning Testing </div>
@@ -123,9 +115,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-5/e-prog-fund-2-junit-dvd-app.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-5/e-prog-fund-2-junit-dvd-app.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Completing DVD app testing </div>
@@ -144,9 +134,7 @@ figcaption
 
   
   
-  
-  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-6/f-prog-fund-2-assignment-2.pdf" target="_blank">
-  
+  <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-6/f-prog-fund-2-assignment-2.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header">  Assignment 2 </div>
@@ -165,9 +153,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-7/a-test-class.zip">
-  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Test Class  </div>
@@ -186,9 +172,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/talk-8/testing-resources.zip">
-  
     <div class="content">
         <div class="right floated meta"> <i class="file large icon"></i></div>
         <div class="header"> Testing Resources </div>
@@ -207,9 +191,7 @@ figcaption
 
   
   
-  
   <a class="ui raised link card" href="http://2016-2017.github.io/prog-fund-2/topic09/book/index.html">
-  
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
         <div class="header"> Lab-09 </div>
@@ -220,6 +202,12 @@ figcaption
     <div class="content">
       <div class="description">
          <p>On completion of this lab you should be able to:</p>
+<ul>
+<li><p>Write JUnit Test Cases for the DVD app.</p>
+</li>
+<li><p>Run and interpret the results of JUnit test classes.</p>
+</li>
+</ul>
 
       </div>
     </div>
